ex28
Python 2.7.13 (default, Nov 24 2017, 17:33:09) 
[GCC 6.3.0 20170516] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> >>> >>> >>> Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/tmp/py900K4p", line 1
    ;; This buffer is for notes you don't want to save, and for Lisp evaluation.
    ^
SyntaxError: invalid syntax
>>> True and True
True
>>> False and True
False
>>> 1 == 1 and 2 == 1
False
>>> "test" == "test"
True
>>> "test" == 'test'
True
>>> 1 == 1 or 2 != 1
True
>>> True and 1 == 1
True
>>> False and 0 != 0
False
>>> True or 1 ==1
True
>>> "test" == "testing"
False
>>> 1 != 0 and 2 == 1
False
>>> 'test' != 'testing'
True
>>> 'test' == 1
False
>>> not (True and False)
True
>>> not (1 ==1 and 0 != 1)
False
>>> 1 == 1 and not ('testing' == 1 or 1 ==0)
True
>>> 'test' and 'test'
'test'
>>> 1 and 1
1
>>> False and 1
False
>>> 'test' or 'tein'
'test'
>>> 
